--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "codepen-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mohankumar27.github.io/codepen-clone/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "codemirror": "^5.57.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
